unified_tests/constants/initializer_unknown_name/expect/build.text.stderr
lib.copp:1:18: error: unknown name 'MISSING'
  BROKEN: int64 := MISSING
                   ^
